ingress/02-NodePort.yaml
# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    #helm.sh/chart: ingress-nginx-4.0.1
    app.kubernetes.io/name: ingress-nginx
    #app.kubernetes.io/instance: ingress-nginx
    #app.kubernetes.io/version: 1.0.0
    #app.kubernetes.io/managed-by: Helm
    #app.kubernetes.io/component: controller
    app.kubernetes.io/parte-of: ingress-nginx
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      #appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      #appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    #app.kubernetes.io/instance: ingress-nginx
    #app.kubernetes.io/component: controller
    app.kubernetes.io/parte-of: ingress-nginx
---
