ingress/04-createIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-text
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080
